fix avqtar badge being cut off

--- a/customize.dist/src/less2/include/messenger.less
+++ b/customize.dist/src/less2/include/messenger.less
@@ -306,12 +306,14 @@
                  flex: 1 1 auto;
                  text-align: center;
                  min-width: 0;
-                 overflow: hidden;
                 .cp-app-contacts-name {
                     white-space: nowrap;
                     overflow: hidden;
                     text-overflow: ellipsis;
                 }
+            }
+            .cp-app-contacts-right-col {
+                overflow: hidden;
             }
             .cp-app-contacts-remove-history {
                 .hover;
